--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,10 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -13,22 +12,18 @@ jobs:
         names: [hpc-focal]
 
     steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
+
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: ${{ matrix.names }}
+
+      - name: ${{ matrix.names }}
         uses: docker/build-push-action@v3
         with:
-          context: ./${{ matrix.names }}
+          context: "{{defaultContext}}:${{ matrix.names }}"
           push: true
           tags: sacnussem/devcontainer:${{ matrix.names }}
