remove quartus installation

--- a/hpc-focal/Dockerfile
+++ b/hpc-focal/Dockerfile
@@ -19,8 +19,7 @@ RUN wget -q https://xpra.org/gpg-2022.asc -O- | apt-key add - && \
     
 RUN npm -g install yarn && yarn global add nodemon
 
-COPY install-quartus.sh .
-RUN sh install-quartus.sh
-
 ENV DISPLAY=:100
-ENV PATH=/opt/intelFPGA_lite/21.1/quartus/bin:$PATH
+# COPY install-quartus.sh .
+# RUN sh install-quartus.sh
+# ENV PATH=/opt/intelFPGA_lite/21.1/quartus/bin:$PATH
