--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - uses: actions/checkout
+      - uses: actions/checkout@v3
           
       # it doesn't support dynamic 'uses'
       - uses: ./hpc-focal
